--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "esrecurse": "^4.2.1",
     "react": "^16.6.3",
+    "react-circle-color-picker": "^1.0.9",
+    "react-color": "^2.17.0",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
   },
