--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "dependencies": {
     "esrecurse": "^4.2.1",
-    "react": "^16.6.3",
+    "react": "^16.7.0",
     "react-circle-color-picker": "^1.0.9",
     "react-color": "^2.17.0",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
