--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.8.3",
     "@material-ui/icons": "^3.0.2",
     "esrecurse": "^4.2.1",
+    "jquery-bracket": "^0.11.1",
     "react": "^16.7.0",
     "react-dom": "^16.6.3",
     "react-scripts": "^2.1.3",
